Width da imagem

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <tr >
             <td>
-                <header id="dados">
+                <section id="dados">
                     <table border="0" align="center" width="100%" cellspacing="0">
                         <tr bgcolor="#F8F8F8">
                             <td width="36px"></td>
@@ -47,12 +47,12 @@
                                 <p>Telefone: 806-681-8197</p>
                                 <p>E-mail: vincentmbrooks@rhyta.com</p>
                             </td>
-                            <td align="right">
+                            <td width="500px">
                                 <img width="500px" height="300" src="assets/img/persona.png" alt="Foto de perfil">
                             </td>
                         </tr>
                     </table>
-                </header>
+                </section>
             </td>
         </tr>
 
@@ -222,7 +222,7 @@
             <td>
                 <footer>
                     <br><br>
-                    <form action="https://www.w3schools.com/action_page.php" method="post" >
+                    <form action="https://www.w3schools.com/action_page.php" >
                         <table width="100%">
                             <tbody>
                                 <tr>
