Vídeo abrindo em uma nova aba

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <td align="center"><a href="#formacao">Formação</a></td>
                                 <td align="center"><a href="#experiencias">Experiências profissionais</a></td>
                                 <td align="center"><a href="#cursos">Cursos e certificações</a></td>
-                                <td bgcolor="#FDFF92" align="center"><a href="apres_movie.html">Vídeo de Apresentação</a></td>
+                                <td bgcolor="#FDFF92" align="center"><a href="apres_movie.html" target="_blank">Vídeo de Apresentação</a></td>
                             </tr>
                         </table>
                     </nav>
